--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-Django==2.2.5
-django-crispy-forms==1.7.2
-django-filter==2.2.0
-django-webpack-loader==0.6.0
-djangorestframework==3.10.3
-Markdown==3.1.1
-pytz==2019.2
-sqlparse==0.3.0
+astroid==2.2.5
+attrs==18.2.0
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+divio-cli==3.5.0
+idna==2.7
+isort==4.3.21
+lazy-object-proxy==1.4.2
+mccabe==0.6.1
+pyaml==18.11.0
+pylint==2.3.1
+PyYAML==3.13
+requests==2.20.1
+six==1.12.0
+tabulate==0.8.3
+typed-ast==1.4.0
+urllib3==1.24.1
+wrapt==1.11.2
